[project]
name = "prompt-injection-env"
version = "0.1.0"
description = "OpenEnv RL environment for prompt injection defense"
authors = [
    { name = "Vishal Patel" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"